--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1263,7 +1263,7 @@ h6 {
   cursor: pointer;
   user-select: none;
   padding: 0.375rem 0.75rem;
-  font-size: 1rem;
+  font-size: 14px;
   border-radius: 0 10px;
   transition: color 0.15s ease-in-out,
     background-color 0.15s ease-in-out,
@@ -1288,3 +1288,9 @@ h6 {
 .aksi .btn-check:checked+.btn, .btn.active, .btn.show, .btn:first-child:active, :not(.btn-check)+.btn:active{
   color: #fff;
 }
+
+.tooltip-ungu .tooltip-inner {
+  background: linear-gradient(to right, #73247f, #2b1361);
+  color: #fff;
+}
+
